Fixes error where FontAwesome list icons weren't appearing on Safari. Adjusted padding top to the front page so introduction will be displayed correctly on OSX.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 /* ========= Font Awesome ========= */
 .fa {
     font-weight: 900;
-    font-family: "Font Awesome 5 Brands";
+}
+
+/* Fixes bug where icons don't show up on Safari */
+.technology-list .fa-ul > li {
+    position: sticky;
 }
 
 .fa-li {
@@ -242,6 +246,7 @@ section {
     flex-direction: column;
     justify-content: center;
 
+    padding-top: 3em;
     min-height: 100vh;
 }
 
@@ -608,7 +613,6 @@ footer {
 /* mobile layout */
 @media (max-height: 635px) {
     .front-page {
-        padding-top: 3em;
         justify-content: flex-start;
     }
 }
